<resources>
    <string name="app_name">GosolinePayment</string>



    <!--~~~~~~~~~~~~~~~~~~登录~~~~~~~~~~~~~~~~~~~-->
    <string name="login_btn_text">Sign In</string>
    <string name="login_text_hint_username">Please enter the username</string>
    <string name="login_text_hint_password">Please input a password</string>

    <!-- ProgressDialog-->
    <string name="progress_dialog_title">Progress Dialog</string>
    <string name="progress_please_wait">Please wait…</string>

    <!--登录提示dialog-->
    <string name="dialog_login_title">您当前账号还未进行登录，请登录后再进行操作</string>
    <string name="cancel">取消</string>
    <string name="login">去登录</string>


    <string name="gasoline_payment">加油支付</string>
    <string name="search">搜索</string>
    <string name="my_order">我的订单</string>
    <string name="smart_add_gasoline">智慧加油</string>
    <string name="all_brand">全部品牌</string>
    <string name="nearest">距离最近</string>
    <string name="cheapest">价格最低</string>



</resources>

