<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="99px"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="47px"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="58.9px"
            android:text="@string/gasoline_payment"
            android:textColor="#FFC8C8C8"
            android:textSize="32px"
            />
        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="47px"
            android:layout_gravity="center_vertical"
            android:text="@string/search"
            android:textColor="#FFC8C8C8"
            android:textSize="32px"
            android:gravity="center"
            android:drawableLeft="@mipmap/search"
            android:layout_marginLeft="58.9px"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_left_parent"
        android:layout_width="330px"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_title"
        android:orientation="vertical"
        android:background="@drawable/background_color_gradient"
        >
        <LinearLayout
            android:id="@+id/ll_smart_add_sagoline"
            android:layout_width="match_parent"
            android:layout_height="99px"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/left_smart_add_gasoline"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_add_gasoline"
                android:textColor="#FFFFFFFF"
                android:textSize="32px"
                android:layout_marginLeft="33px"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_my_order"
            android:layout_width="match_parent"
            android:layout_height="99px"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/left_order"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_order"
                android:textColor="#FFFFFFFF"
                android:textSize="32px"
                android:layout_marginLeft="33px"
                />

        </LinearLayout>

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_title"
        android:layout_toRightOf="@+id/ll_left_parent"
        />

</RelativeLayout>